scripts/nullaway/annotator/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8.txt
../annotator/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/sales/BasicSale.java:70: error: [NullAway] dereferenced expression customer is @Nullable
	return customer.getGreeting(store);
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url0c7746c72b_wsuetholz_DiscountStrategy_tgz-pJ8-net_suetholz_pos_MainJ8/src/net/suetholz/pos/sales/BasicSale.java:75: error: [NullAway] dereferenced expression customer is @Nullable
	return customer.getThankYou(store);
	               ^
    (see http://t.uber.com/nullaway )
2 errors
